# Exercises-

./: .gitignore
AsmMips/: .gitignore  factorial  factorial.asm  factorialreal.asm  fibonacci.asm  funcionMultuplicar.asm  holamundo.asm  promediospositivos.asm
BlockBreak/: CMakeLists.txt  main.cpp
C#/passwordencrypter/: Program.cs
HelloWorldSyscallsC++/: hola_cpp  main.cpp
IsPrime/: CMakeLists.txt  main.cpp
OpenGL/: CMakeLists.txt  main.cpp  vcpkg.json
Orbit/: .gitignore  main.cpp  vcpkg.json
Pendulum/: justfile  main.cpp  vcpkg.json
Server/: justfile  main.cpp
helloworldC++/: hola  main.cpp
nullpointersC/: main  main.c  main.cpp
rust/guessing_game/src/: main.rs
rust/slices/src/: main.rs
rust/structs/src/: main.rs
untitled/: CMakeLists.txt  FallingSand  main.cpp
x86-64asm/: helloworld  helloworld.asm  suma.asm
x86-64asm/asmt/: asm  asm.s
x86-64asm/convert_to_uppercase/: uppercase  uppercase.asm
x86-64asm/echo/: echo  echo.asm
x86-64asm/print_number/: asm  asm.s
